init mobile layout

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             </div>
         </div>
         <div class="section-1">
-            <img src="Images/background-1.jpg" />
+            <button type="button" class="join-mobile btn btn-outline-light">Join Group</button>
+            <img class="mobile-bg-img" src="./Images/mobile-bg.jpg"/>
+            <img class="desktop-bg-img" src="Images/background-1.jpg" />
             <div class="text-content">
                 <p class="h1">Computer Engineering</p>
                 <p class="sub-heading">142,765 Computer Engineers follows this</p>
@@ -59,6 +61,14 @@
         </div>
         <div class="section-2">
             <div class="container-fluid">
+                <div class="navigation-mobile row">
+                    <div class="left">
+                        Posts(368)
+                    </div>
+                    <div class="right">
+                        <button type="button" class="btn btn-light">Filter : All &nbsp; <i class="fas fa-caret-down"></i></button>
+                    </div>
+                </div>
                 <div class="navigation row">
                     <div class="col-lg-7">
                         <button class="allposts">
