--- a/index.html
+++ b/index.html
@@ -120,9 +120,14 @@
                                         What if famous brands had regular fonts? Meet RegulaBrands!
                                     </div>
                                     <div class="edit">
-                                        <button class="edit-dots">
+                                        <button class="edit-dots" data-toggle="dropdown">
                                             <i class="fas fa-ellipsis-h"></i>
                                         </button>
+                                        <div class="dropdown-menu">
+                                            <div class="dropdown-item">Edit</div>
+                                            <div class="dropdown-item">Report</div>
+                                            <div class="dropdown-item">Unfollow</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="post-main-content">
@@ -164,9 +169,14 @@
                                         Tax Benefits for Investment under National Pension Scheme launched by Government
                                     </div>
                                     <div class="edit">
-                                        <button class="edit-dots">
+                                        <button class="edit-dots" data-toggle="dropdown">
                                             <i class="fas fa-ellipsis-h"></i>
                                         </button>
+                                        <div class="dropdown-menu">
+                                            <div class="dropdown-item">Edit</div>
+                                            <div class="dropdown-item">Report</div>
+                                            <div class="dropdown-item">Unfollow</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="post-main-content">
@@ -208,9 +218,14 @@
                                         Finance & Investment Elite Social Mixer @Lujiazui
                                     </div>
                                     <div class="edit">
-                                        <button class="edit-dots">
+                                        <button class="edit-dots" data-toggle="dropdown">
                                             <i class="fas fa-ellipsis-h"></i>
                                         </button>
+                                        <div class="dropdown-menu">
+                                            <div class="dropdown-item">Edit</div>
+                                            <div class="dropdown-item">Report</div>
+                                            <div class="dropdown-item">Unfollow</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="post-main-content">
@@ -262,9 +277,14 @@
                                         Software Developer
                                     </div>
                                     <div class="edit">
-                                        <button class="edit-dots">
+                                        <button class="edit-dots" data-toggle="dropdown">
                                             <i class="fas fa-ellipsis-h"></i>
                                         </button>
+                                        <div class="dropdown-menu">
+                                            <div class="dropdown-item">Edit</div>
+                                            <div class="dropdown-item">Report</div>
+                                            <div class="dropdown-item">Unfollow</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="post-main-content">
@@ -367,7 +387,7 @@
                                         <button class="rec-btn">Follow</button>
                                     </div>
                                 </div>
-                                <a href="#" class="link-primary">See More...</a>
+                                <a href="#" class="seemore link-primary">See More...</a>
                             </div>
                         </div>
                     </div>
