--- a/main/index.html
+++ b/main/index.html
@@ -29,8 +29,8 @@
     </script>
     <link href="https://cdn.jsdelivr.net/gh/coliff/bootstrap-rfs/bootstrap-rfs.css" rel="stylesheet">
     <!--STYLESHEETS-->
-    <link rel="stylesheet" href="style1.css" />
-    <link rel="stylesheet" href="./mediaquery.css" />
+    <link rel="stylesheet" type="text/css" href="style1.css"/>
+    
     <title>ATG World</title>
 </head>
 
@@ -440,7 +440,7 @@
                             </div>
                             <input class="conf-password" placeholder="Confirm Password" type="password" />
                             <button type="button" class="btn btn-primary create-acc-btn">Create Account</button>
-                            <button type="button" class="fbsu"> <img src="./Images/fb.jpg" />Sign up with
+                            <button type="button" class="fbsu"> <img src="Images/fb.jpg" />Sign up with
                                 Facebook</button>
                             <button type="button" class="googlesu"><img src="Images/google.jpg" /> Sign up with
                                 Google</button>
@@ -484,7 +484,7 @@
                             </div>
 
                             <button type="button" class="btn btn-primary create-acc-btn">Sign In</button>
-                            <button type="button" class="fbsu"> <img src="./Images/fb.jpg" />Sign in with
+                            <button type="button" class="fbsu"> <img src="Images/fb.jpg" />Sign in with
                                 Facebook</button>
                             <button type="button" class="googlesu"><img src="Images/google.jpg" /> Sign in with
                                 Google</button>
@@ -524,7 +524,7 @@
                         <button type="button" class="btn btn-primary create-acc-btn">Create Account</button>
                         <a class="signin-link link-dark">or, Sign In</a>
                     </div>
-                    <button type="button" class="fbsu"> <img src="./Images/fb.jpg" />Sign up with
+                    <button type="button" class="fbsu"> <img src="Images/fb.jpg" />Sign up with
                         Facebook</button>
                     <button type="button" class="googlesu"><img src="Images/google.jpg" /> Sign up with
                         Google</button>
@@ -555,7 +555,7 @@
                         <button type="button" class="btn btn-primary create-acc-btn">Sign In</button>
                         <a class="create-acc link-dark">or, Create Account</a>
                     </div>
-                    <button type="button" class="fbsu"> <img src="./Images/fb.jpg" />Sign in with
+                    <button type="button" class="fbsu"> <img src="Images/fb.jpg" />Sign in with
                         Facebook</button>
                     <button type="button" class="googlesu"><img src="Images/google.jpg" /> Sign in with
                         Google</button>
@@ -565,7 +565,7 @@
         </div>
     </div>
 
-    <script src="./script1.js">
+    <script src="script1.js">
 
     </script>
 </body>
